--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,2 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td><br> <a title="Screenshot" href="C:\Users\Gia Hy\git\repository\KIDOLSHOP\.\Screenshots\TC02_LoginWithInvalidAccount_l3cui0lyg_3tetobcpa30r9.png" ><img alt='TC02_LoginWithInvalidAccount_l3cui0lyg_3tetobcpa30r9.png' src='.\Screenshots\TC02_LoginWithInvalidAccount_l3cui0lyg_3tetobcpa30r9.png' height= '243' width='418'></a><br></td></tr>
+</table>
